fixed z-index for modals to show above the menu so you can not open more than 1 modal at a time

--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -40,7 +40,7 @@
 .signup-submit-button-not {
   width: 100px;
   border-radius: 5px;
-  margin-top: 10px;
+  margin-top: 30px;
   align-self: center;
   font-size: 15px;
   width: 85%;
